--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.jflex.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.jflex.gradle
@@ -47,13 +47,16 @@ configure(project(":lucene:core")) {
           encoding: "UTF-8",
           token: "private static final int ZZ_BUFFERSIZE =",
           value: "private int ZZ_BUFFERSIZE ="
-      )
+          )
     }
   }
 
   def generateStandardTokenizer = wrapWithPersistentChecksums(generateStandardTokenizerInternal, [
-          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
-          mustRunBefore: [ "compileJava" ]
+    andThenTasks: [
+      "spotlessJava",
+      "spotlessJavaApply"
+    ],
+    mustRunBefore: ["compileJava"]
   ])
 
   regenerate.dependsOn generateStandardTokenizer
@@ -83,9 +86,9 @@ configure(project(":lucene:analysis:common")) {
 
         ignoreExitValue false
         args = [
-            tldZones,
-            tmpJflexMacro,
-            tmpTldList
+          tldZones,
+          tmpJflexMacro,
+          tmpTldList
         ]
       }
 
@@ -148,13 +151,16 @@ configure(project(":lucene:analysis:common")) {
           encoding: "UTF-8",
           token: "private static final int ZZ_BUFFERSIZE =",
           value: "private int ZZ_BUFFERSIZE ="
-      )
+          )
     }
   }
 
   def generateUAX29URLEmailTokenizer = wrapWithPersistentChecksums(generateUAX29URLEmailTokenizerInternal, [
-          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
-          mustRunBefore: [ "compileJava" ]
+    andThenTasks: [
+      "spotlessJava",
+      "spotlessJavaApply"
+    ],
+    mustRunBefore: ["compileJava"]
   ])
 
   // UAX29URLEmailTokenizerImpl.jflex includes: ASCIITLD.jflex
@@ -179,9 +185,10 @@ configure(project(":lucene:analysis:common")) {
         executable = project.externalTool("python3")
         workingDir = target.parentFile
         args += [
-            "-B", // don't write any bytecode cache
-            script,
-            target
+          "-B",
+          // don't write any bytecode cache
+          script,
+          target
         ]
       }
 
@@ -189,7 +196,7 @@ configure(project(":lucene:analysis:common")) {
           file: target,
           encoding: "UTF-8",
           eol: "lf"
-      )
+          )
     }
   }
 
@@ -205,8 +212,11 @@ configure(project(":lucene:analysis:common")) {
   }
 
   def extraConfig = [
-      andThenTasks: ["spotlessJava", "spotlessJavaApply"],
-      mustRunBefore: [ "compileJava" ]
+    andThenTasks: [
+      "spotlessJava",
+      "spotlessJavaApply"
+    ],
+    mustRunBefore: ["compileJava"]
   ]
 
   def generateHTMLStripCharFilter = wrapWithPersistentChecksums(generateHTMLStripCharFilterInternal, extraConfig)
@@ -262,9 +272,10 @@ class JFlexTask extends DefaultTask {
 
       main = "jflex.Main"
       args += [
-          "-nobak",
-          "--quiet",
-          "--encoding", "UTF-8",
+        "-nobak",
+        "--quiet",
+        "--encoding",
+        "UTF-8",
       ]
 
       if (heapSize) {
@@ -272,12 +283,16 @@ class JFlexTask extends DefaultTask {
       }
 
       if (skeleton) {
-        args += ["--skel", skeleton.absolutePath]
+        args += [
+          "--skel",
+          skeleton.absolutePath
+        ]
       }
 
       args += [
-          "-d", target.parentFile.absolutePath,
-          jflexFile
+        "-d",
+        target.parentFile.absolutePath,
+        jflexFile
       ]
     }
 
@@ -286,17 +301,17 @@ class JFlexTask extends DefaultTask {
     // you can't "stack" SuppressWarnings annotations, jflex adds its own, this is the only way
     // https://github.com/jflex-de/jflex/issues/762
     project.ant.replace(
-          file: target,
-          encoding: "UTF-8",
-          token: 'SuppressWarnings("fallthrough")',
-          value: 'SuppressWarnings({"fallthrough","unused"})'
-    )
+        file: target,
+        encoding: "UTF-8",
+        token: 'SuppressWarnings("fallthrough")',
+        value: 'SuppressWarnings({"fallthrough","unused"})'
+        )
 
     // Correct line endings for Windows.
     project.ant.fixcrlf(
         file: target,
         encoding: "UTF-8",
         eol: "lf"
-    )
+        )
   }
 }
