--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
@@ -1,5 +1,3 @@
-import java.nio.file.Files
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -16,6 +14,7 @@ import java.nio.file.Files
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import java.nio.file.Files
 
 configure(project(":lucene:expressions")) {
   configurations {
@@ -27,16 +26,16 @@ configure(project(":lucene:expressions")) {
   }
 
   task generateAntlrInternal() {
-    description "Regenerate Javascript.g4"
-    group "generation"
+    description = "Regenerate Javascript.g4"
+    group = "generation"
 
     dependsOn configurations.antlr
 
     def generatedPatterns = [
-        "**/JavascriptBaseVisitor.java",
-        "**/JavascriptLexer.java",
-        "**/JavascriptParser.java",
-        "**/JavascriptVisitor.java",
+      "**/JavascriptBaseVisitor.java",
+      "**/JavascriptLexer.java",
+      "**/JavascriptParser.java",
+      "**/JavascriptVisitor.java",
     ]
 
     def sourceDir = "src/java/org/apache/lucene/expressions/js"
@@ -57,11 +56,13 @@ configure(project(":lucene:expressions")) {
 
         ignoreExitValue false
         args = [
-            "-no-listener",
-            "-visitor",
-            "-package", "org.apache.lucene.expressions.js",
-            "-o", tempOutput,
-            inputFiles
+          "-no-listener",
+          "-visitor",
+          "-package",
+          "org.apache.lucene.expressions.js",
+          "-o",
+          tempOutput,
+          inputFiles
         ]
       }
 
@@ -84,9 +85,12 @@ configure(project(":lucene:expressions")) {
 
   def generateAntlr = wrapWithPersistentChecksums(
       generateAntlrInternal, [
-          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
-          mustRunBefore: [ "compileJava" ]
-  ])
+        andThenTasks: [
+          "spotlessJava",
+          "spotlessJavaApply"
+        ],
+        mustRunBefore: ["compileJava"]
+      ])
 
   regenerate.dependsOn generateAntlr
 }
