Apply spotless to all build.gradle scripts.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.spotless-groovy.gradle
@@ -34,7 +34,8 @@ spotless.format("gradleScripts", GroovyGradleExtension.class, { ext ->
   ext.endWithNewline()
   ext.target([
     "build-tools/**/*.gradle",
-    "build-tools/**/*.groovy"
+    "build-tools/**/*.groovy",
+    "**/build.gradle"
   ])
 })
 
