--- a/lucene/analysis/opennlp/build.gradle
+++ b/lucene/analysis/opennlp/build.gradle
@@ -41,7 +41,10 @@ tasks.register('trainTestModels') {
     trainModel('TokenizerTrainer', 'en', 'tokenizer.txt', 'en-test-tokenizer.bin')
     trainModel('POSTaggerTrainer', 'en', 'pos.txt', 'en-test-pos-maxent.bin')
     trainModel('ChunkerTrainerME', 'en', 'chunks.txt', 'en-test-chunker.bin')
-    trainModel('TokenNameFinderTrainer', 'en', 'ner.txt', 'en-test-ner.bin', ['-params', 'ner_TrainerParams.txt'])
+    trainModel('TokenNameFinderTrainer', 'en', 'ner.txt', 'en-test-ner.bin', [
+      '-params',
+      'ner_TrainerParams.txt'
+    ])
     trainModel('LemmatizerTrainerME', 'en', 'lemmas.txt', 'en-test-lemmatizer.bin')
   }
 }
@@ -51,7 +54,14 @@ def trainModel(String command, String lang, String data, String model, List extr
     classpath = sourceSets.main.compileClasspath
     mainClass = 'opennlp.tools.cmdline.CLI'
     workingDir = testModelDataDir
-    args = [command, '-lang', lang, '-data', data, '-model', "${testModelDir}/${model}"] + extraArgs
+    args = [
+      command,
+      '-lang',
+      lang,
+      '-data',
+      data,
+      '-model',
+      "${testModelDir}/${model}"
+    ] + extraArgs
   }
 }
-
