--- a/.github/workflows/run-special-checks-sandbox.yml
+++ b/.github/workflows/run-special-checks-sandbox.yml
@@ -27,16 +27,18 @@ jobs:
 
     steps:
       - name: Install Faiss
-        uses: mamba-org/setup-micromamba@v2
+        uses: mamba-org/setup-micromamba@b09ef9b599704322748535812ca03efb2625677b #v2.0.5
         id: setup
         with:
           environment-name: faiss-env
           # TODO: Use only conda-forge if possible, see https://github.com/conda-forge/faiss-split-feedstock/pull/88
-          condarc: 'channels: [pytorch, conda-forge]'
-          create-args: faiss-cpu=${{ matrix.faiss-version }}
+          create-args: >-
+            -c pytorch
+            -c conda-forge
+            faiss-cpu=${{ matrix.faiss-version }}
 
       - name: Checkout Lucene
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Prepare Lucene workspace
         uses: ./.github/actions/prepare-for-build
