--- a/lucene/distribution/build.gradle
+++ b/lucene/distribution/build.gradle
@@ -96,7 +96,7 @@ dependencies {
 
 
 // Compute checksums for release archives.
-task computeChecksums(type: org.apache.lucene.gradle.Checksum) {
+tasks.register("computeChecksums", org.apache.lucene.gradle.Checksum, {
   files = objects.fileCollection()
   [
     tasks.assembleSourceTgz,
@@ -107,7 +107,7 @@ task computeChecksums(type: org.apache.lucene.gradle.Checksum) {
   }
 
   outputDir = file("${buildDir}/checksums")
-}
+})
 
 
 tasks.register("prepareGitRev", {
@@ -123,7 +123,7 @@ tasks.register("prepareGitRev", {
 
 
 // Assemble everything needed in the release folder structure.
-task assembleRelease(type: Sync) {
+tasks.register("assembleRelease", Sync, {
   description "Assemble all Lucene artifacts for a release."
 
   from(configurations.changesHtml, {
@@ -146,7 +146,7 @@ task assembleRelease(type: Sync) {
   }
 
   into releaseDir
-}
+})
 
 
 // Add the description and task group to some of the tasks that make
@@ -157,6 +157,6 @@ tasks.matching {
     "assembleBinaryTgz",
     "assembleRelease",
   ]
-}.all {
-  group "distribution"
+}.configureEach {
+  group = "distribution"
 }
