Fix deprecated Gradle groovy dsl syntax on prop assignment
This fixes Gradle deprecation warnings thrown for using deprecated API caused by

"propName value" syntax used in Groovy dsl that relies on Gradle generated
dsl extensions.

--- a/build-tools/build-infra/src/main/groovy/lucene.all-projects.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.all-projects.conventions.gradle
@@ -53,7 +53,7 @@ allprojects {project ->
 
   // Common tasks or meta-tasks.
   tasks.register("tidy", {
-    description "Applies all code formatters and other enforced cleanups to the project."
-    group "verification"
+    description = "Applies all code formatters and other enforced cleanups to the project."
+    group = "verification"
   })
 }
