Fix deprecated Gradle API usage scheduled to be removed in Gradle 9.0
With Gradle 9.0 approaching soon, this fixes incompatibilities with Gradle 9.0 by
fixing two types of deprecated api usage in the build logic:

1. The org.gradle.api.plugins.JavaPluginConvention type has been deprecated
2. The Project.exec(Closure) method has been deprecated.

--- a/build-tools/build-infra/src/main/groovy/lucene.java.jar-manifest.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.jar-manifest.gradle
@@ -46,6 +46,7 @@ tasks.withType(Jar).configureEach { task ->
     }
   }
 
+  def javaPluginExtension = project.getExtensions().getByType(JavaPluginExtension)
   def manifestAttrs = [
     "Extension-Name"        : implementationTitle,
 
@@ -58,8 +59,8 @@ tasks.withType(Jar).configureEach { task ->
     "Specification-Title"   : title,
 
     // Evaluate these properties lazily so that the defaults are applied properly.
-    "X-Compile-Source-JDK"  : "${-> project.sourceCompatibility}",
-    "X-Compile-Target-JDK"  : "${-> project.targetCompatibility}",
+    "X-Compile-Source-JDK"  : "${-> javaPluginExtension.getSourceCompatibility().toString() }",
+    "X-Compile-Target-JDK"  : "${-> javaPluginExtension.getTargetCompatibility().toString() }",
 
     "X-Build-JDK"           : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
     "X-Build-OS"            : "${System.properties['os.name']} ${System.properties['os.arch']} ${System.properties['os.version']}"
