--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -165,6 +165,11 @@ ext.externalTool = { String name ->
   throw new GradleException("External tool named '${name}' is not defined.")
 }
 
+
+interface InjectedExec {
+  @Inject ExecOperations getOps()
+}
+
 // TODO: These utility methods should be moved somewhere else or removed.
 allprojects {
   ext {
@@ -192,7 +197,8 @@ allprojects {
               }
             }
 
-        result = project.exec { ExecSpec execSpec ->
+        def injected = project.objects.newInstance(InjectedExec)
+        result = injected.ops.exec { ExecSpec execSpec ->
           project.configure(execSpec, closure)
 
           saveIgnoreExitValue = execSpec.ignoreExitValue
