Fix deprecated Gradle groovy dsl syntax on property assignments (#14780)
* Fix deprecated Gradle groovy dsl syntax on prop assignment

This fixes Gradle deprecation warnings thrown for using deprecated API caused by

"propName value" syntax used in Groovy dsl that relies on Gradle generated
dsl extensions.

* Fix formatting

--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.icu.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.icu.gradle
@@ -96,7 +96,7 @@ configure(project(":lucene:analysis:icu")) {
         main = "org.apache.lucene.analysis.icu.GenerateUTR30DataFiles"
         classpath = sourceSets.tools.runtimeClasspath
 
-        ignoreExitValue false
+        ignoreExitValue = false
         workingDir utr30DataDir
         args = [
           "release-${icu4jVersion.replace(".", "-")}"
@@ -146,7 +146,7 @@ configure(project(":lucene:analysis:icu")) {
         main = "org.apache.lucene.analysis.icu.RBBIRuleCompiler"
         classpath = sourceSets.tools.runtimeClasspath
 
-        ignoreExitValue false
+        ignoreExitValue = false
         enableAssertions true
         args = [sourceDir, targetDir]
       }
@@ -255,8 +255,8 @@ configure(project(":lucene:analysis:common")) {
     def icuConfig = rootProject.configurations.icu_current
     def outputFile = file("src/java/org/apache/lucene/analysis/util/UnicodeProps.java")
 
-    description "Regenerate ${outputFile} (with ${icuConfig.name})"
-    group "generation"
+    description = "Regenerate ${outputFile} (with ${icuConfig.name})"
+    group = "generation"
 
     dependsOn icuConfig
 
@@ -293,8 +293,8 @@ configure(project(":lucene:core")) {
     def icuConfig = rootProject.configurations.icu_current
     def outputFile = file("src/java/org/apache/lucene/util/automaton/CaseFolding.java")
 
-    description "Regenerate ${outputFile} (with ${icuConfig.name})"
-    group "generation"
+    description = "Regenerate ${outputFile} (with ${icuConfig.name})"
+    group = "generation"
 
     dependsOn icuConfig
 
